cmake_minimum_required(VERSION 2.8)
project(fftool CXX)

include_directories(./src ./src/core ./include)

set(source_files ./src/main.cpp )
aux_source_directory(./src source_files)
aux_source_directory(./src/core source_files)

add_definitions("-g -O0")
#link_directories(${project_source_dir}/lib)
add_executable(fftool ${source_files})

target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libavformat.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libavcodec.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libavutil.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libavfilter.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libswresample.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libswscale.a)
target_link_libraries(fftool /root/codec/cProject/ffplush/trunk/lib/libavdevice.a)
target_link_libraries(fftool -ldl)
target_link_libraries(fftool -lm)
target_link_libraries(fftool -lz)
target_link_libraries(fftool dl)
target_link_libraries(fftool -pthread)
